tests/data/errors/incomplete_construct/input.py

if True:
	pass
else:
	pass
elif False:
	pass



try:
	pass
finally:
	pass
except:
	pass

x = 1

except:
	pass

x = 2

else:
	pass


def decor(func):
	return func


@decor
x = 2
